--- a/public/themes/widget/dark/css/dark_popup_style.css
+++ b/public/themes/widget/dark/css/dark_popup_style.css
@@ -198,7 +198,7 @@
 	border-radius:3px
 	}
 	
-.shareTail{background:url(../images/share-arrow.png) no-repeat;width:11px;height:7px;position:absolute;bottom:-7px;left:3px;}
+.shareTail{background:url(/img/share-arrow.png) no-repeat;width:11px;height:7px;position:absolute;bottom:-7px;left:3px;}
 	.twitter-button{margin-top:0px;float:left;width:80px;}
 	.facebook-button{float:left;width:80px;}
 	
