--- a/public/themes/widget/dark/css/dark_vertical_style.css
+++ b/public/themes/widget/dark/css/dark_vertical_style.css
@@ -158,7 +158,7 @@
 	.back a{
 		color:#919191;
 	}
-.shareTail{background:url(../images/share-arrow.png) no-repeat;width:11px;height:7px;position:absolute;bottom:-7px;left:3px;}
+.shareTail{background:url(/img/share-arrow.png) no-repeat;width:11px;height:7px;position:absolute;bottom:-7px;left:3px;}
 	.twitter-button{margin-top:0px;float:left;width:80px;}
 	.facebook-button{float:left;width:80px;}
 	
