--- a/public/css/widget_master/form.css
+++ b/public/css/widget_master/form.css
@@ -6,11 +6,19 @@
 
 #s36_ratings{color:#adafb0;font-size:12px;font-weight:bold;}
 #s36_ratings ul{margin:0px;padding:0px;position:relative;height:25px;}
+
 #s36_ratings ul li	   	  {list-style:none;display:inline;margin:0px;padding:0px;position:absolute;top:0px;}
+/*
 #s36_ratings ul li.good	  {left:97px;}
 #s36_ratings ul li.average{left:180px;}
 #s36_ratings ul li.poor	  {left:276px;}
 #s36_ratings ul li.bad	  {left:365px;}
+*/
+
+#s36_ratings ul li.poor	  {left:97px;}
+#s36_ratings ul li.average{left:180px;}
+#s36_ratings ul li.good	  {left:276px;}
+#s36_ratings ul li.excellent {left:365px;}
 
 /* permission page */
 #s36_permissions{background:#900;}
@@ -34,26 +42,26 @@
 	width:80px;float:left;
 	background:#ececec;height:75px;
 }
-	.s36_perm_details .s36_perm_icon1,
-	.s36_perm_details .s36_perm_icon2,
-	.s36_perm_details .s36_perm_icon3{
-		width:40px;height:38px;margin:0 auto;margin-top:20px;
-		background:url(../../img/ico-perms.png) no-repeat;
-		background-position:0px 0px;
-	}
-	.s36_perm_details .s36_perm_icon2{
-		background-position:-40px 0px;
-	}
-	.s36_perm_details .s36_perm_icon3{
-		background-position:-80px 0px;
-	}
-	.s36_perm_text{
-		padding:10px;
-		float:left;
-		width:250px;
-	}
-	.s36_perm_text p, .s36_perm_text h3{padding:0px;margin:0px;}
-	.s36_perm_text p{font-size:11px;color:#7d8082;margin-top:4px;}
+.s36_perm_details .s36_perm_icon1,
+.s36_perm_details .s36_perm_icon2,
+.s36_perm_details .s36_perm_icon3{
+    width:40px;height:38px;margin:0 auto;margin-top:20px;
+    background:url(../../img/ico-perms.png) no-repeat;
+    background-position:0px 0px;
+}
+.s36_perm_details .s36_perm_icon2{
+    background-position:-40px 0px;
+}
+.s36_perm_details .s36_perm_icon3{
+    background-position:-80px 0px;
+}
+.s36_perm_text{
+    padding:10px;
+    float:left;
+    width:250px;
+}
+.s36_perm_text p, .s36_perm_text h3{padding:0px;margin:0px;}
+.s36_perm_text p{font-size:11px;color:#7d8082;margin-top:4px;}
 /* form styles */
 .regular-textarea{
 	background:#f7f7f7;
