--- a/public/css/widget_master/hosted-form.css
+++ b/public/css/widget_master/hosted-form.css
@@ -155,10 +155,16 @@ a.cropbtn:hover{
 #s36_ratings{font-size:12px;font-weight:bold;}
 #s36_ratings ul{margin:0px;padding:0px;position:relative;height:25px;}
 #s36_ratings ul li	   	  {list-style:none;display:inline;margin:0px;padding:0px;position:absolute;top:0px;}
+/*
 #s36_ratings ul li.good	  {left:114px;}
 #s36_ratings ul li.average{left:211px;}
 #s36_ratings ul li.poor	  {left:330px;}
 #s36_ratings ul li.bad	  {left:437px;}
+*/
+#s36_ratings ul li.poor	  {left:114px;}
+#s36_ratings ul li.average{left:211px;}
+#s36_ratings ul li.good	  {left:330px;}
+#s36_ratings ul li.excellent {left:437px;}
 
 /* permission page */
 #s36_permissions{}
