--- a/public/themes/form/form-matte.css
+++ b/public/themes/form/form-matte.css
@@ -1,9 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
-
 body{
-	color:#666;
+	font-family:Arial, Helvetica, sans-serif;font-size:12px;color:#666;
 	background: #f0f0f0;
+	margin:0;padding:0;widht:100%;height:100%;
 }
 a{color:#5c8ac0;}
 a:hover{color:#6896cb;}
