--- a/public/themes/form/form-aglow.css
+++ b/public/themes/form/form-aglow.css
@@ -4,7 +4,7 @@
 body{
 	font-family:Arial, Helvetica, sans-serif;font-size:12px;color:#666;
 	background: #FFF;
-	margin:0;padding:0;widht:100%;height:100%;
+	margin:0;padding:0;width:100%;height:100%;
 }
 a{color:#5c8ac0;}
 a:hover{color:#6896cb;}
