--- a/public/themes/form/form-matte.css
+++ b/public/themes/form/form-matte.css
@@ -2,27 +2,18 @@
 /* CSS Document */
 
 body{
-	font-family:Arial, Helvetica, sans-serif;font-size:12px;color:#666;
+	color:#666;
 	background: #f0f0f0;
-	margin:0;padding:0;width:100%;height:100%;
 }
 a{color:#5c8ac0;}
 a:hover{color:#6896cb;}
 #s36_main{
-	width:447px;
-	height:590px;
-	position:absolute;
-	background:#f0f0f0;
+	background:#f0f0f0 top repeat-x;
 }
 #s36_whitebar{
-	height:15px;
-	width:447px;
 	background:transparent;
 }
-#s36_pages,#s36_steps{
-	width:447px;
-	height:465px;
-}
+
 .error-message{
 	background:url(../../img/error-bg.png) repeat;
 	color:#212121;
@@ -73,7 +64,67 @@ a.s36_btn:hover{
 }
 
 /* rating page */
-#track_ball{background:url(../images/trackball.png) no-repeat;}
+#track_ball{background:url(../../img/trackball.png) no-repeat;}
+
+#s36_ratings{color:#adafb0;}
+
+/* permission page */
+#s36_permissions{background:#900;}
+.s36_perm_details{
+	background:#f4f4f4;
+}
+.s36_perm_details .s36_perm_icon{
+	background:#ececec;
+}
+.full .s36_perm_details{background:#daeec9;}
+.full .s36_perm_icon{background:#daeec9;}
+.limited .s36_perm_details{background:#faf1d4;}
+.limited .s36_perm_icon{background:#faf1d4;}
+	.s36_perm_details .s36_perm_icon1,
+	.s36_perm_details .s36_perm_icon2,
+	.s36_perm_details .s36_perm_icon3{
+		background:url(../../img/ico-perms.png) no-repeat;
+		background-position:0px 0px;
+	}
+	.s36_perm_details .s36_perm_icon2{
+		background-position:-40px 0px;
+	}
+	.s36_perm_details .s36_perm_icon3{
+		background-position:-80px 0px;
+	}
+	.s36_perm_text p{color:#7d8082;}
+/* form styles */
+.regular-textarea{
+	background:#f7f7f7;
+	border:1px solid #e1e1e1;
+}
+
+/* connect page */
+.s36_block .company{background:url(../../img/s36-logo.png);}
+.s36_block .warning{background:#d1d4d4;}
+.gray{
+	background:#f0f0f0;
+}
+.s36_blue_btn{
+	background:#84b1ce;
+	color:#FFF;
+}
+.s36_blue_btn:hover{
+	background:#97c2de;
+}
+
+/* form styles */
+input.regular-text{border:1px solid #c5c9cb;color:#666;box-shadow:#f0f0f0 0px 0px 0px 3px;}
+input.reg-text-active{color:#999;}
+select.regular-select{border:1px solid #c5c9cb;color:#666;-webkit-box-shadow:#f0f0f0 0px 0px 0px 3px;box-shadow:#f0f0f0 0px 0px 0px 3px;}
+select.reg-text-active{color:#AAA;}
+select:focus{border:1px solid #b1d1e4;outline:#b1d1e4;-webkit-box-shadow:#daecf8 0px 0px 0px 3px;box-shadow:#daecf8 0px 0px 0px 3px;}
+input:focus{border:1px solid #b1d1e4;outline:#b1d1e4;box-shadow:#daecf8 0px 0px 0px 3px;}
+
+/* review page */
 
 /* review page slide */
+.review-avatar{background:#e6e8e8;}
 .review-feedback-box{background:#f7f7f7;border:1px solid #e1e1e1;}
+.review-edit-feedback a{color:#afb1b2;}
+.review-feedback-box .regular-textarea{background:#FFF;}
