--- a/public/css/widget_master/form-master.css
+++ b/public/css/widget_master/form-master.css
@@ -99,17 +99,23 @@ a.cropbtn:hover{
 
 /* rating page */
 #rate_e,#rate_g,#rate_a,#rate_p,#rate_b{float:left;height:33px;position:relative;cursor:pointer;}
-#track_ball{width:30px;height:33px;position:absolute;left:-1px;}
+#track_ball{width:30px;height:33px;position:absolute;background:url(../../img/trackball.png) no-repeat;left:-1px;}
 #rate_e,#rate_b{width:48px;}
 #rate_g,#rate_a,#rate_p{width:97px;}
 
 #s36_ratings{font-size:12px;font-weight:bold;}
 #s36_ratings ul{margin:0px;padding:0px;position:relative;height:25px;}
 #s36_ratings ul li	   	  {list-style:none;display:inline;margin:0px;padding:0px;position:absolute;top:0px;}
+/*
 #s36_ratings ul li.good	  {left:97px;}
 #s36_ratings ul li.average{left:180px;}
 #s36_ratings ul li.poor	  {left:276px;}
 #s36_ratings ul li.bad	  {left:365px;}
+*/
+#s36_ratings ul li.poor	  {left:97px;}
+#s36_ratings ul li.average{left:180px;}
+#s36_ratings ul li.good	  {left:276px;}
+#s36_ratings ul li.excellent {left:338px;}
 
 /* permission page */
 #s36_permissions{}
@@ -138,6 +144,7 @@ a.cropbtn:hover{
 	.s36_perm_details .s36_perm_icon2,
 	.s36_perm_details .s36_perm_icon3{
 		width:40px;height:38px;margin:0 auto;margin-top:20px;
+        background:url(../../img/ico-perms.png) no-repeat;
 		background-position:0px 0px;
 	}
 	.s36_perm_details .s36_perm_icon2{
@@ -170,7 +177,7 @@ a.cropbtn:hover{
 }
 
 /* connect page */
-.s36_block .company{background-repeat:no-repeat;background-position:center left;padding:15px 15px 15px 160px;font-size:11px;}
+.s36_block .company{background:url(../../img/s36-logo.png);background-repeat:no-repeat;background-position:center left;padding:15px 15px 15px 160px;font-size:11px;}
 .s36_block .warning{width:82px;float:left;text-align:center;padding:13px 0px;}
 .s36_block .warning-text{width:270px;float:left;padding:10px 15px;font-size:11px;line-height:18px;}
 .gray{
