--- a/public/css/widget_master/form-master.css
+++ b/public/css/widget_master/form-master.css
@@ -99,23 +99,17 @@ a.cropbtn:hover{
 
 /* rating page */
 #rate_e,#rate_g,#rate_a,#rate_p,#rate_b{float:left;height:33px;position:relative;cursor:pointer;}
-#track_ball{width:30px;height:33px;position:absolute;background:url(../../img/trackball.png) no-repeat;left:-1px;}
+#track_ball{width:30px;height:33px;position:absolute;left:-1px;}
 #rate_e,#rate_b{width:48px;}
 #rate_g,#rate_a,#rate_p{width:97px;}
 
 #s36_ratings{font-size:12px;font-weight:bold;}
 #s36_ratings ul{margin:0px;padding:0px;position:relative;height:25px;}
 #s36_ratings ul li	   	  {list-style:none;display:inline;margin:0px;padding:0px;position:absolute;top:0px;}
-/*
 #s36_ratings ul li.good	  {left:97px;}
 #s36_ratings ul li.average{left:180px;}
 #s36_ratings ul li.poor	  {left:276px;}
 #s36_ratings ul li.bad	  {left:365px;}
-*/
-#s36_ratings ul li.poor	  {left:97px;}
-#s36_ratings ul li.average{left:180px;}
-#s36_ratings ul li.good	  {left:276px;}
-#s36_ratings ul li.excellent {left:338px;}
 
 /* permission page */
 #s36_permissions{}
@@ -144,7 +138,6 @@ a.cropbtn:hover{
 	.s36_perm_details .s36_perm_icon2,
 	.s36_perm_details .s36_perm_icon3{
 		width:40px;height:38px;margin:0 auto;margin-top:20px;
-        background:url(../../img/ico-perms.png) no-repeat;
 		background-position:0px 0px;
 	}
 	.s36_perm_details .s36_perm_icon2{
