--- a/public/css/widget_master/form-master.css
+++ b/public/css/widget_master/form-master.css
@@ -99,17 +99,23 @@ a.cropbtn:hover{
 
 /* rating page */
 #rate_e,#rate_g,#rate_a,#rate_p,#rate_b{float:left;height:33px;position:relative;cursor:pointer;}
-#track_ball{width:30px;height:33px;position:absolute;left:-1px;}
+#track_ball{width:30px;height:33px;position:absolute;background:url(../../img/trackball.png) no-repeat;left:-1px;}
 #rate_e,#rate_b{width:48px;}
 #rate_g,#rate_a,#rate_p{width:97px;}
 
 #s36_ratings{font-size:12px;font-weight:bold;}
 #s36_ratings ul{margin:0px;padding:0px;position:relative;height:25px;}
 #s36_ratings ul li	   	  {list-style:none;display:inline;margin:0px;padding:0px;position:absolute;top:0px;}
+/*
 #s36_ratings ul li.good	  {left:97px;}
 #s36_ratings ul li.average{left:180px;}
 #s36_ratings ul li.poor	  {left:276px;}
 #s36_ratings ul li.bad	  {left:365px;}
+*/
+#s36_ratings ul li.poor	  {left:97px;}
+#s36_ratings ul li.average{left:180px;}
+#s36_ratings ul li.good	  {left:276px;}
+#s36_ratings ul li.excellent {left:338px;}
 
 /* permission page */
 #s36_permissions{}
