--- a/public/css/widget_master/form-master.css
+++ b/public/css/widget_master/form-master.css
@@ -144,6 +144,7 @@ a.cropbtn:hover{
 	.s36_perm_details .s36_perm_icon2,
 	.s36_perm_details .s36_perm_icon3{
 		width:40px;height:38px;margin:0 auto;margin-top:20px;
+        background:url(../../img/ico-perms.png) no-repeat;
 		background-position:0px 0px;
 	}
 	.s36_perm_details .s36_perm_icon2{
@@ -176,7 +177,7 @@ a.cropbtn:hover{
 }
 
 /* connect page */
-.s36_block .company{background-repeat:no-repeat;background-position:center left;padding:15px 15px 15px 160px;font-size:11px;}
+.s36_block .company{background:url(../../img/s36-logo.png);background-repeat:no-repeat;background-position:center left;padding:15px 15px 15px 160px;font-size:11px;}
 .s36_block .warning{width:82px;float:left;text-align:center;padding:13px 0px;}
 .s36_block .warning-text{width:270px;float:left;padding:10px 15px;font-size:11px;line-height:18px;}
 .gray{
