--- a/public/css/widget_master/hosted-fullpage.css
+++ b/public/css/widget_master/hosted-fullpage.css
@@ -6,7 +6,7 @@ body{
 	margin:0px;
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:12px;
-	background:#FFF;
+	background:#FAFAFA;
 }
 
 a{color:#4894b3;text-decoration:none;}
@@ -55,7 +55,7 @@ div{position:relative;}
 .companyDetails{margin-left:282px;display:block;color:#000;margin-right:10px;}
 .companyDetails h2{font-weight:normal;font-size:22px;margin-left:2px;margin:10px 0px 6px;}
 .companyDetails p{line-height:1.8em;font-size:14px;color:#000;margin-left:2px;}
-.companyLinks{background:#FFF;padding:5px;}
+.companyLinks{background:#FAFAFA;padding:5px;}
 .companyLinks ul{list-style:none;margin:0px;padding:5px;}
 .companyLinks ul li{display:inline;padding:5px 5px 5px 10px;}
 .companyLinks ul li{border-right:1px solid #EEE;}
