--- a/public/css/widget_master/hosted-fullpage.css
+++ b/public/css/widget_master/hosted-fullpage.css
@@ -163,4 +163,6 @@ div{position:relative;}
 
 .featured .feedbackSocial{height:20px;}
 .normal .feedbackSocial{height:20px;}
-.feedbackSocial .feedbackSocialTwitter,.feedbackSocial .feedbackSocialFacebook .feedbackSocialView{display:none;}
+.feedbackSocial .feedbackSocialTwitter,
+.feedbackSocial .feedbackSocialFacebook, 
+.feedbackSocial .feedbackSocialView{display:none;}
