--- a/public/css/widget_master/hosted-fullpage.css
+++ b/public/css/widget_master/hosted-fullpage.css
@@ -90,6 +90,7 @@ div{position:relative;}
 .featured .feedbackTimestamp{width:350px;text-align:right;padding-right:10px;padding-top:2px;}
 .featured .feedbackSocialTwitter{width:90px;}
 .featured .feedbackSocialFacebook{width:90px;}
+.featured .feedbackSocialTwitter{width:90px;}
 .featured .feedbackDate{position:absolute;bottom:-40px;right:0px;font-weight:bold;color:#7bb5e5;text-shadow:#FFF 0px 1px;}
 /* normal */
 .normal .feedbackAuthor{display:block;}
@@ -162,7 +163,7 @@ div{position:relative;}
 }
 
 .featured .feedbackSocial{height:20px;}
-.normal .feedbackSocial{height:20px;}
+.normal .feedbackSocial{height:20px;width:100%}
 .feedbackSocial .feedbackSocialTwitter,
 .feedbackSocial .feedbackSocialFacebook, 
 .feedbackSocial .feedbackSocialView{display:none;}
