--- a/public/css/widget_master/hosted-fullpage.css
+++ b/public/css/widget_master/hosted-fullpage.css
@@ -86,10 +86,13 @@ div{position:relative;}
 .featured .feedbackSocial,
 .featured .feedbackSocialTwitter,
 .featured .feedbackSocialFacebook,
-.featured .feedbackSocialView {float:left;width:90px}
-
+.featured .feedbackSocialView {float:left;}
 .featured .feedbackTimestamp{width:350px;text-align:right;padding-right:10px;padding-top:2px;}
-.featured .feedbackSocialView{font-weight:bold}
+/*
+.featured .feedbackSocialTwitter{width:90px;}
+.featured .feedbackSocialFacebook{width:90px;}
+*/
+.featured .feedbackSocialView{font-weight:bold;}
 .featured .feedbackDate{position:absolute;bottom:-40px;right:0px;font-weight:bold;color:#7bb5e5;text-shadow:#FFF 0px 1px;}
 /* normal */
 .normal .feedbackAuthor{display:block;}
