--- a/public/css/widget_master/hosted-fullpage.css
+++ b/public/css/widget_master/hosted-fullpage.css
@@ -92,7 +92,6 @@ div{position:relative;}
 .featured .feedbackSocialTwitter{width:90px;}
 .featured .feedbackSocialFacebook{width:90px;}
 */
-.featured .feedbackSocialView{font-weight:bold;}
 .featured .feedbackDate{position:absolute;bottom:-40px;right:0px;font-weight:bold;color:#7bb5e5;text-shadow:#FFF 0px 1px;}
 /* normal */
 .normal .feedbackAuthor{display:block;}
@@ -169,3 +168,5 @@ div{position:relative;}
 .feedbackSocial .feedbackSocialTwitter,
 .feedbackSocial .feedbackSocialFacebook, 
 .feedbackSocial .feedbackSocialView{display:none;}
+
+.feedbackSocialView{font-weight:bold;}
