--- a/public/css/widget_master/hosted-fullpage.css
+++ b/public/css/widget_master/hosted-fullpage.css
@@ -87,12 +87,15 @@ div{position:relative;}
 .featured .feedbackSocialTwitter,
 .featured .feedbackSocialFacebook,
 .featured .feedbackSocialView {float:left;}
+
 .featured .feedbackTimestamp{width:350px;text-align:right;padding-right:10px;padding-top:2px;}
 /*
 .featured .feedbackSocialTwitter{width:90px;}
 */
-.featured .feedbackSocialFacebook{width:90px;}
+.featured .feedbackSocialFacebook{width:90px;right:20px}
+.featured .feedbackSocialView{font-weight:bold; top:2px; right: 20px}
 .featured .feedbackDate{position:absolute;bottom:-40px;right:0px;font-weight:bold;color:#7bb5e5;text-shadow:#FFF 0px 1px;}
+
 /* normal */
 .normal .feedbackAuthor{display:block;}
 .normal .feedbackAuthor .feedbackAuthorAvatar{width:48px;height:48px;float:left;}
@@ -115,6 +118,7 @@ div{position:relative;}
 .normal .feedbackTimestamp{padding-right:7px;padding-top:2px;float:left;}
 .normal .feedbackSocialTwitter{width:85px;}
 .normal .feedbackSocialFacebook{width:90px;}
+.normal .feedbackSocialView{font-weight:bold; top:2px; right: 10px}
 
 .masonry,
 .masonry .masonry-brick {
@@ -165,8 +169,8 @@ div{position:relative;}
 
 .featured .feedbackSocial{height:20px;}
 .normal .feedbackSocial{height:20px;width:280px}
+
+
 .feedbackSocial .feedbackSocialTwitter,
 .feedbackSocial .feedbackSocialFacebook, 
 .feedbackSocial .feedbackSocialView{display:none;}
-
-.feedbackSocialView{font-weight:bold; top:2px; right: 10px}
