--- a/public/css/widget_master/hosted-fullpage.css
+++ b/public/css/widget_master/hosted-fullpage.css
@@ -85,15 +85,14 @@ div{position:relative;}
 .featured .feedbackTimestamp,
 .featured .feedbackSocial,
 .featured .feedbackSocialTwitter,
-.featured .feedbackSocialFacebook,
-.featured .feedbackSocialView {float:left;}
+.featured .feedbackSocialFacebook{float:left;}
 
 .featured .feedbackTimestamp{width:350px;text-align:right;padding-right:10px;padding-top:2px;}
 /*
 .featured .feedbackSocialTwitter{width:90px;}
 */
 .featured .feedbackSocialFacebook{width:90px;right:20px}
-.featured .feedbackSocialView{font-weight:bold; top:3px; right: 30px}
+.featured .feedbackSocialView{font-weight:bold; top:3px; right: 30px;float:right}
 .featured .feedbackDate{position:absolute;bottom:-40px;right:0px;font-weight:bold;color:#7bb5e5;text-shadow:#FFF 0px 1px;}
 
 /* normal */
@@ -113,12 +112,11 @@ div{position:relative;}
 .normal .feedbackMeta{padding-top:5px;}
 .normal .feedbackTimestamp,
 .normal .feedbackSocial,
-.normal .feedbackSocialTwitter,
-.normal .feedbackSocialFacebook{float:left;}
+.normal .feedbackSocialTwitter{float:left;}
 .normal .feedbackTimestamp{padding-right:7px;padding-top:2px;float:left;}
 .normal .feedbackSocialTwitter{width:85px;}
 .normal .feedbackSocialFacebook{width:90px;}
-.normal .feedbackSocialView{font-weight:bold; top:3px; right: 10px}
+.normal .feedbackSocialView{font-weight:bold; top:3px; right: 10px;float:right}
 
 .masonry,
 .masonry .masonry-brick {
