--- a/public/css/widget_master/hosted-fullpage.css
+++ b/public/css/widget_master/hosted-fullpage.css
@@ -167,7 +167,6 @@ div{position:relative;}
 .featured .feedbackSocial{height:20px;}
 .normal .feedbackSocial{height:20px;width:280px}
 .feedbackSocial .feedbackSocialTwitter,
-.feedbackSocial .feedbackSocialFacebook, 
-.feedbackSocial .feedbackSocialView{display:none;}
+.feedbackSocial .feedbackSocialFacebook {display:none;}
 
-.feedbackSocialView{font-weight:bold; top:3px; right: 10px;float:right}
+.feedbackSocialView{display:none; font-weight:bold; top:3px; right: 10px;float:right}
