--- a/public/css/widget_master/hosted-fullpage.css
+++ b/public/css/widget_master/hosted-fullpage.css
@@ -169,4 +169,4 @@ div{position:relative;}
 .feedbackSocial .feedbackSocialTwitter,
 .feedbackSocial .feedbackSocialFacebook {display:none;}
 
-.feedbackSocialView{display:none; font-weight:bold; top:3px; right: 10px;float:left}
+/*.feedbackSocialView{display:none; font-weight:bold; top:3px; right: 10px;float:left}*/
