--- a/public/css/widget_master/hosted-fullpage.css
+++ b/public/css/widget_master/hosted-fullpage.css
@@ -164,4 +164,4 @@ div{position:relative;}
 .featured .feedbackSocial{height:20px;}
 .normal .feedbackSocial{height:20px;}
 .feedbackSocial .feedbackSocialTwitter,.feedbackSocial .feedbackSocialFacebook, .feedbackSocialView{display:none;}
-.feedbackSocialView{ color: #7bb5e5; }
+.feedbackSocialView{ color: #A4D3EE; }
