--- a/public/css/widget_master/form-master.css
+++ b/public/css/widget_master/form-master.css
@@ -277,3 +277,6 @@ select.reg-text-active{font-weight:normal;}
 
 /* added */
 #step_2,#step_3,#step_4,#step_5,#step_6,#step_7{display:none}
+
+/* added 6/20/2012 */
+.tr-photo-upload{background:#e6e8e8;}
