--- a/public/themes/form/form-dark.css
+++ b/public/themes/form/form-dark.css
@@ -270,43 +270,12 @@ input:focus{border:1px solid #AAA;outline:#5d5d5d;box-shadow:#222 0px 0px 0px 3p
 #edit-review-feedback,#save-edited-feedback{position:absolute;}
 /* jcrop css */
 #crop_status{padding-left:5px;}
-.jcrop_div{margin:0 auto;position:relative;margin-bottom:10px;}
-.jcrop_div input{display:none !important;}
-/* Fixes issue here http://code.google.com/p/jcrop/issues/detail?id=1 */
-.jcrop-holder { text-align: left; }
-
-.jcrop-vline, .jcrop-hline
-{
-	font-size: 0px;
-	position: absolute;
-	background: white url('../../img/Jcrop.gif') top left repeat;
-}
-.jcrop-vline { height: 100%; width: 1px !important; }
-.jcrop-hline { width: 100%; height: 1px !important; }
-.jcrop-vline.right { right: 0px; }
-.jcrop-hline.bottom { bottom: 0px; }
-.jcrop-handle {
-	font-size: 1px;
-	width: 7px !important;
-	height: 7px !important;
-	border: 1px #eee solid;
-	background-color: #333;
-}
-
-.jcrop-tracker { width: 100%; height: 100%; }
-
-.custom .jcrop-vline,
-.custom .jcrop-hline
-{
-	background: yellow;
-}
-.custom .jcrop-handle
-{
-	border-color: black;
-	background-color: #C7BB00;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-}
 
 /* added */
+
+/* review page slide */
+.review-avatar{background:#101010;}
+.review-feedback-box{background:#111;border:1px solid #525252;}
+.review-edit-feedback a{color:#afb1b2;}
+.review-feedback-box .regular-textarea{background:#FFF;}
 .tr-photo-upload{background:#202020 !important;color:#474747;}
