--- a/public/css/widget_master/hosted-form.css
+++ b/public/css/widget_master/hosted-form.css
@@ -347,3 +347,7 @@ select.reg-text-active{font-weight:normal;}
 .companyLinks ul li a.website{background-position:0px 1px;}
 .companyLinks ul li a.facebook{background-position:0px -25px;}
 .companyLinks ul li a.twitter{background-position:0px -50px;}
+
+div.feedback {
+    padding-top:25px;  
+}
