--- a/public/css/widget_master/form-default.css
+++ b/public/css/widget_master/form-default.css
@@ -63,7 +63,7 @@ a.cropbtn:hover{
 	#s36_whattowrite ul{}
 /* trackbar styles */
 #s36_trackbar{
-	background:url(../../img/trackbar-long.png) no-repeat;
+	background:url(../../img/hosted-trackbar.png) no-repeat;
 }
 
 /* rating page */
