--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -745,9 +745,9 @@ input.large-text, input.form-text{padding:10px;width:80%;}
 }
 .widget-preview-box{
     width:210px;float:left;
-    margin-right:10px;
+    margin-right:40px;
 }
-.widget-preview-box p{font-size:11px;}
+.widget-preview-box p{font-size:11px;padding-top:10px !important;text-align:center;}
 .widget-previews{
     display:block;
     border:1px solid #d6dfe6;
