--- a/public/themes/form/form-dark.css
+++ b/public/themes/form/form-dark.css
@@ -134,12 +134,6 @@ a.cropbtn:hover{
 #s36_ratings{color:#adafb0;font-size:12px;font-weight:bold;}
 #s36_ratings ul{margin:0px;padding:0px;position:relative;height:25px;}
 #s36_ratings ul li	   	  {list-style:none;display:inline;margin:0px;padding:0px;position:absolute;top:0px;}
-/*
-#s36_ratings ul li.good	  {left:97px;}
-#s36_ratings ul li.average{left:180px;}
-#s36_ratings ul li.poor	  {left:276px;}
-#s36_ratings ul li.bad	  {left:365px;}
-*/
 
 #s36_ratings ul li.poor	  {left:97px;}
 #s36_ratings ul li.average{left:180px;}
@@ -155,6 +149,10 @@ a.cropbtn:hover{
 	text-align:center;
 	padding-top:30px;
 }
+
+.full .s36_perm_details{padding-top:30px;padding-bottom:30px;}
+.full .s36_perm_radio{padding-top:58px;}
+
 .s36_perm_details{
 	border-radius:6px;
 	-moz-border-radius:6px;
@@ -168,26 +166,28 @@ a.cropbtn:hover{
 	width:80px;float:left;
 	background:#2e2e2e;height:75px;
 }
-	.s36_perm_details .s36_perm_icon1,
-	.s36_perm_details .s36_perm_icon2,
-	.s36_perm_details .s36_perm_icon3{
-		width:40px;height:38px;margin:0 auto;margin-top:20px;
-		background:url(../../img/ico-perms.png) no-repeat;
-		background-position:0px 0px;
-	}
-	.s36_perm_details .s36_perm_icon2{
-		background-position:-40px 0px;
-	}
-	.s36_perm_details .s36_perm_icon3{
-		background-position:-80px 0px;
-	}
-	.s36_perm_text{
-		padding:10px;
-		float:left;
-		width:250px;
-	}
-	.s36_perm_text p, .s36_perm_text h3{padding:0px;margin:0px;}
-	.s36_perm_text p{font-size:11px;color:#7d8082;margin-top:4px;}
+
+.s36_perm_details .s36_perm_icon1,
+.s36_perm_details .s36_perm_icon2,
+.s36_perm_details .s36_perm_icon3{
+    width:40px;height:38px;margin:0 auto;margin-top:20px;
+    background:url(../../img/ico-perms.png) no-repeat;
+    background-position:0px 0px;
+}
+.s36_perm_details .s36_perm_icon2{
+    background-position:-40px 0px;
+}
+.s36_perm_details .s36_perm_icon3{
+    background-position:-80px 0px;
+}
+.s36_perm_text{
+    padding:10px;
+    float:left;
+    width:250px;
+}
+.s36_perm_text p, .s36_perm_text h3{padding:0px;margin:0px;}
+.s36_perm_text p{font-size:11px;color:#7d8082;margin-top:4px;}
+
 /* form styles */
 .regular-textarea{
 	background:#141414;
@@ -283,3 +283,4 @@ input:focus{border:1px solid #AAA;outline:#5d5d5d;box-shadow:#222 0px 0px 0px 3p
 div.feedback {
     padding-top:25px;  
 }
+
