--- a/public/css/widget_master/form-master.css
+++ b/public/css/widget_master/form-master.css
@@ -139,6 +139,20 @@ a.cropbtn:hover{
 	width:80px;float:left;
 	height:75px;
 }
+
+
+.full .s36_perm_details{background:#daeec9;border:3px solid #daeec9;}
+.full .s36_perm_icon{background:#daeec9;}
+.limited .s36_perm_details{background:#faf1d4;border:3px solid #faf1d4;}
+.limited .s36_perm_icon{background:#faf1d4;}
+.private .s36_perm_details{background:#F4F4F4;border:3px solid #F4F4F4;}
+.private .s36_perm_icon{background:#F4F4F4;}
+
+.full .active_perm{border:3px solid #4d9a12;}
+.limited .active_perm{border:3px solid #e3b013;}
+.private .active_perm{border:3px solid #8a979b;}
+
+
 .full .s36_perm_details{padding-top:30px;padding-bottom:30px;}
 .full .s36_perm_radio{padding-top:58px;}
 	.s36_perm_details .s36_perm_icon1,
