--- a/public/themes/form/form-dark.css
+++ b/public/themes/form/form-dark.css
@@ -186,6 +186,7 @@ a.cropbtn:hover{
 .s36_perm_text p, .s36_perm_text h3{padding:0px;margin:0px;}
 .s36_perm_text p{font-size:11px;color:#7d8082;margin-top:4px;}
 
+.full .s36_perm_details{padding-top:30px;padding-bottom:30px;}
 .full .s36_perm_details{background:#4c9a12;color:FFF;border:2px solid #4c9a12;}
 .full .s36_perm_icon{background:#4c9a12;}
 .limited .s36_perm_details{background:#e2b011;color:FFF;border:2px solid #e2b011;}
@@ -196,6 +197,7 @@ a.cropbtn:hover{
 .full    .s36_perm_details.active_perm{border:2px solid #c3ff97;}
 .limited .s36_perm_details.active_perm{border:2px solid #ffeeba;}
 .private .s36_perm_details.active_perm{border:2px solid #ccd1d1;}
+
 
 .s36_perm_text h3{color:#FFF;}
 .s36_perm_text p{color:#FFF;}
