--- a/public/themes/hosted/form/form-cloudy.css
+++ b/public/themes/hosted/form/form-cloudy.css
@@ -20,7 +20,7 @@ a:hover{color:#6896cb;}
 }
 
 .error-message{
-	background:url(../images/error-bg.png) repeat;
+	background:url(../../../img/error-bg.png) repeat;
 	color:#212121;
 	border-top:2px solid #e5db58;
 	border-bottom:2px solid #e5db58;
@@ -30,7 +30,7 @@ a:hover{color:#54a1c0;}
 
 #headerWrapper{
 	padding-bottom:10px;
-	background:#3fafd4 url(../images/cloudy/bot-curve.jpg) repeat-x bottom;
+	background:#3fafd4 url(images/cloudy/bot-curve.jpg) repeat-x bottom;
 }
 
 #headerTitle{
@@ -44,7 +44,7 @@ a:hover{color:#54a1c0;}
 /* template styles */
 
 #headerWrapper{
-	background:#3fafd4 url(../images/cloudy/bot-curve.jpg) repeat-x bottom;
+	background:#3fafd4 url(images/cloudy/bot-curve.jpg) repeat-x bottom;
 	border-top:#DDD 1px solid;
 }
 #feedbackBox{border:1px solid #3fafd4}
@@ -85,16 +85,16 @@ a.cropbtn:hover{
 	.s36_pages .step-contents{}
 	
 	#s36_whattowrite{
-		background:url(../images/ico-question.png) no-repeat top left;
+		background:url(../../../img/ico-question.png) no-repeat top left;
 	}
 	#s36_whattowrite ul{}
 /* trackbar styles */
 #s36_trackbar{
-	background:url(../images/trackbar.png) no-repeat;
+	background:url(../../../img/trackbar.png) no-repeat;
 }
 
 /* rating page */
-#track_ball{background:url(../images/trackball.png) no-repeat;}
+#track_ball{background:url(../../../img/trackball.png) no-repeat;}
 
 #s36_ratings{color:#adafb0;}
 
@@ -117,7 +117,7 @@ a.cropbtn:hover{
 	.s36_perm_details .s36_perm_icon1,
 	.s36_perm_details .s36_perm_icon2,
 	.s36_perm_details .s36_perm_icon3{
-		background:url(../images/ico-perms.png) no-repeat;
+		background:url(../../../img/ico-perms.png) no-repeat;
 	}
 	.s36_perm_details .s36_perm_icon2{
 		background-position:-40px 0px;
@@ -132,7 +132,7 @@ a.cropbtn:hover{
 	border:1px solid #e1e1e1;
 }
 /* connect page */
-.s36_block .company{background:url(../images/s36-logo.png);}
+.s36_block .company{background:url(../../../img/s36-logo.png);}
 .s36_block .warning{background:#d1d4d4;}
 .gray{
 	background:#f0f0f0;
