--- a/public/themes/widget/salad/css/salad_vertical_style.css
+++ b/public/themes/widget/salad/css/salad_vertical_style.css
@@ -108,7 +108,7 @@
 	}
 .share{
 	padding-left: 16px;
-	background: url(../images/ico-share.png) no-repeat left top;
+	background: url(/img/ico-share.png) no-repeat left top;
 	margin-left:4px;
 }
 .theSocialButtons{
@@ -149,12 +149,12 @@
 	}
 	.back{
 		padding-left:7px;
-		background:url(../images/ico-back.png) left center no-repeat;
+		background:url(/img/ico-back.png) left center no-repeat;
 	}
 	.back a{
 		color:#919191;
 	}
-.shareTail{background:url(../images/share-arrow.png) no-repeat;width:11px;height:7px;position:absolute;bottom:-7px;left:3px;}
+.shareTail{background:url(/img/share-arrow.png) no-repeat;width:11px;height:7px;position:absolute;bottom:-7px;left:3px;}
 	.twitter-button{margin-top:0px;float:left;width:80px;}
 	.facebook-button{float:left;width:80px;}
 	
