--- a/public/themes/form/form-cloudy.css
+++ b/public/themes/form/form-cloudy.css
@@ -3,64 +3,24 @@
 
 body{
 	color:#666;
+	background: #FFF;
 }
-
 a{color:#5c8ac0;}
 a:hover{color:#6896cb;}
-
 #s36_main{
 	background:#FFF;
 }
-
 #s36_whitebar{
-	background:#FFF;
+	background:#3fafd4;
 }
-
-#s36_pages,#s36_steps{
-}
-
 .error-message{
 	background:url(../../img/error-bg.png) repeat;
 	color:#212121;
 	border-top:2px solid #e5db58;
 	border-bottom:2px solid #e5db58;
 }
-a{color:#4894b3;}
-a:hover{color:#54a1c0;}
-
-#headerWrapper{
-	padding-bottom:10px;
-	background:#3fafd4 url(images/cloudy/bot-curve.jpg) repeat-x bottom;
-}
-
-#headerTitle{
-	color:#FFF;
-		text-shadow:none;
-}
-#headerTitle strong{color:#FFF;	text-shadow:none;}
-#headerTitle span {}
-#headerTitle span a{color:#FFF;	text-shadow:none;}
-#headerTitle a:hover{color:#EEE;	text-shadow:none;}
-/* template styles */
-
-#headerWrapper{
-	background:#3fafd4 url(images/cloudy/bot-curve.jpg) repeat-x bottom;
-	border-top:#DDD 1px solid;
-}
-#feedbackBox{border:1px solid #3fafd4}
 /* classes */	
-a.s36_btn{
-	background:#3fafd4;
-	border:1px solid #295691;
-	color:#FFF;
-	text-shadow:#295691 0px 1px;
-}
-a.s36_btn:hover{
-	background:#82bbe8;
-	border:1px solid #295691;
-	color:#FFF;
-	text-shadow:#295691 0px 1px;
-}
+
 /* crop button */
 a.cropbtn{
 	background:#1cb5f5;
@@ -75,19 +35,28 @@ a.cropbtn:hover{
 	text-shadow:none;
 }
 /* crop button */
-/* pages class */
+a.s36_btn{
+	background:#3fafd4;
+	border:1px solid #3e90ba;
+	color:#FFF;
+	text-shadow:#165576 0px 1px;
+	text-decoration:none;
+}
+a.s36_btn:hover{
+	background:#7ac1e6;
+	border:1px solid #3e90ba;
+	color:#cbedff;
+	text-shadow:#165576 0px 1px;
+}
 
-	.s36_pages h1{background:#aab0b2;color:#FFF;}
+	.s36_pages h1{background:#3fafd4 url(images/cloudy/bot-curve.jpg) bottom repeat-x;color:#FFF;padding:8px 30px 20px;}
 	.s36_pages h3{color:#303030;}
 	.s36_pages h3 a.s36_tip{color:#c3c3c3;}
-	.s36_pages h3 a.s36_tip:hover{}
 	.s36_pages h4{color:#6f7375;}
-	.s36_pages .step-contents{}
 	
 	#s36_whattowrite{
 		background:url(../../img/ico-question.png) no-repeat top left;
 	}
-	#s36_whattowrite ul{}
 /* trackbar styles */
 #s36_trackbar{
 	background:url(../../img/trackbar.png) no-repeat;
@@ -95,29 +64,21 @@ a.cropbtn:hover{
 
 /* rating page */
 #track_ball{background:url(../../img/trackball.png) no-repeat;}
-
 #s36_ratings{color:#adafb0;}
 
 /* permission page */
 #s36_permissions{background:#900;}
-
 .s36_perm_details{
 	background:#f4f4f4;
 }
 .s36_perm_details .s36_perm_icon{
-	background:#F4F4F4;
+	background:#ececec;
 }
-.full,.limited,.private{border:2px solid #FFF;}
-.full{}
-.full .s36_perm_details{background:#f4f4f4;}
-.full .s36_perm_icon{background:#f4f4f4;}
-.full .s36_perm_radio{}
-.limited .s36_perm_details{background:#f4f4f4;}
-.limited .s36_perm_icon{background:#f4f4f4;}
 	.s36_perm_details .s36_perm_icon1,
 	.s36_perm_details .s36_perm_icon2,
 	.s36_perm_details .s36_perm_icon3{
 		background:url(../../img/ico-perms.png) no-repeat;
+		background-position:0px 0px;
 	}
 	.s36_perm_details .s36_perm_icon2{
 		background-position:-40px 0px;
@@ -131,6 +92,7 @@ a.cropbtn:hover{
 	background:#f7f7f7;
 	border:1px solid #e1e1e1;
 }
+
 /* connect page */
 .s36_block .company{background:url(../../img/s36-logo.png);}
 .s36_block .warning{background:#d1d4d4;}
